--- a/src/main/UI/src/app/app.component.css
+++ b/src/main/UI/src/app/app.component.css
@@ -77,6 +77,7 @@ body {
   font: 200 1em/1.5em "Exo 2", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: #FFFFFF;
   color: #000000;
+
 }
 
 /* line 7, ../../../components/sass/_base.scss */
@@ -122,6 +123,13 @@ body {
   content: " ";
   display: block;
   clear: both;
+}
+
+/* 7.5.24 change welcome message color
+
+  */
+.welcome-message-white {
+  color: white;
 }
 
 @media (min-width: 1200px) {
