--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -15,6 +15,8 @@
     <nav id="nav" style="position: relative; top: 0; left: 0; bottom: auto; right: auto; width: 100%;">
       <div class="navbar">
         <div class="brand"><a href="/#welcome">Landon <span>Hotel</span></a></div>
+        <p class="welcome-message-white">{{ welcomeMessage[0] }}</p>
+        <p class="welcome-message-white">{{ welcomeMessage[1] }}</p>
       </div><!-- navbar -->
     </nav>
   </div>
@@ -23,7 +25,11 @@
   <div class="scene" id="welcome">
     <article class="content">
 
- 
+      <!-- Placeholder for welcome messages
+      <div *ngIf="welcomeMessage.length">
+        <body>Welcome Messages</body>
+        <p *ngFor="let message of welcomeMessage"> {{ message }}</p>
+      </div> -->
 
       <div class="row">
         <div class=""col-12>
@@ -58,7 +64,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
